force-app/main/default/objects/Visit__c/fields/Beat_Line__c.field-meta.xml
<CustomField>
    <fullName>Beat_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat Line</label>
    <referenceTo>Beat_Line__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>