force-app/main/default/objects/Visit__c/fields/Clock_In__c.field-meta.xml
<CustomField>
    <fullName>Clock_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clock In</label>
    <type>Checkbox</type>
</CustomField>