force-app/main/default/objects/Visit__c/fields/Clockin_Date__c.field-meta.xml
<CustomField>
    <fullName>Clockin_Date__c</fullName>
    <label>Clockin Date</label>
    <type>DateTime</type>
</CustomField>