force-app/main/default/objects/Visit__c/fields/ClockIn_Latitude__c.field-meta.xml
<CustomField>
    <fullName>ClockIn_Latitude__c</fullName>
    <label>ClockIn Latitude</label>
    <precision>8</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>