force-app/main/default/objects/Visit__c/fields/Clockin_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Clockin_Longitude__c</fullName>
    <label>Clockin Longitude</label>
    <precision>8</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>