force-app/main/default/objects/Visit__c/fields/Clockout_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Clockout_Longitude__c</fullName>
    <label>Clockout Longitude</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>