force-app/main/default/objects/Visit__c/fields/Custome_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Custome_Longitude__c</fullName>
    <formula>IF( Account__c&lt;&gt; null,  Account__r.Geolocation__Longitude__s , null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>