force-app/main/default/objects/Visit__c/fields/Customer_Lattitude__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lattitude__c</fullName>
    <formula>IF( Account__c &lt;&gt; null ,  Account__r.Geolocation__Latitude__s , null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Lattitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>