force-app/main/default/objects/Visit__c/fields/Distance_Travel_For_End_Day__c.field-meta.xml
<CustomField>
    <fullName>Distance_Travel_For_End_Day__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Distance Travel For End Day</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>