force-app/main/default/objects/Visit__c/fields/EId__c.field-meta.xml
<CustomField>
    <fullName>EId__c</fullName>
    <externalId>true</externalId>
    <label>EId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>