force-app/main/default/objects/Visit__c/fields/Enable_Return__c.field-meta.xml
<CustomField>
    <fullName>Enable_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Return</label>
    <type>Checkbox</type>
</CustomField>