force-app/main/default/objects/Visit__c/fields/marketing_material__c.field-meta.xml
<CustomField>
    <fullName>marketing_material__c</fullName>
    <label>Placement &amp;removal of marketing material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>