force-app/main/default/objects/Visit__c/fields/Meet_and_greet__c.field-meta.xml
<CustomField>
    <fullName>Meet_and_greet__c</fullName>
    <label>Meet and greet shop owners &amp; shop Staff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>