force-app/main/default/objects/Visit__c/fields/New_Beat__c.field-meta.xml
<CustomField>
    <fullName>New_Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat</label>
    <referenceTo>New_Beat__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>