force-app/main/default/objects/Visit__c/fields/Planned_start_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_start_Date__c</fullName>
    <formula>DATEVALUE( Planned_Start_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned start Date</label>
    <type>Date</type>
</CustomField>