force-app/main/default/objects/Visit__c/fields/Planned_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_Time__c</fullName>
    <label>Planned Start Time</label>
    <type>DateTime</type>
</CustomField>