force-app/main/default/objects/Visit__c/fields/PostPoned__c.field-meta.xml
<CustomField>
    <fullName>PostPoned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PostPoned</label>
    <type>Checkbox</type>
</CustomField>