force-app/main/default/objects/Visit__c/fields/Reason_for_visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_visit__c</fullName>
    <label>Reason for visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>