force-app/main/default/objects/Visit__c/fields/Sales_Executive__c.field-meta.xml
<CustomField>
    <fullName>Sales_Executive__c</fullName>
    <formula>Account__r.Sales_Executive__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Executive</label>
    <type>Text</type>
</CustomField>