force-app/main/default/objects/Visit__c/fields/Store_EID__c.field-meta.xml
<CustomField>
    <fullName>Store_EID__c</fullName>
    <formula>Dealer__r.EId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store EID</label>
    <type>Text</type>
</CustomField>