force-app/main/default/objects/Visit__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dealer Feedback</fullName>
            </value>
            <value>
                <fullName>Competitor Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>