force-app/main/default/objects/Visit__c/fields/Test_Names__c.field-meta.xml
<CustomField>
    <fullName>Test_Names__c</fullName>
    <label>Test Names</label>
    <type>TextArea</type>
</CustomField>