force-app/main/default/objects/Visit__c/fields/Total_Travel_Distance__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Distance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Travel Distance</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>