force-app/main/default/objects/Visit__c/fields/Visit_Type1__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type1__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Installtion</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Exams and Activities</fullName>
            </value>
            <value>
                <fullName>Value Added Services</fullName>
            </value>
            <value>
                <fullName>general visit</fullName>
            </value>
            <value>
                <fullName>renewal visits</fullName>
            </value>
            <value>
                <fullName>addhoc visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>