force-app/main/default/objects/Visit__c/validationRules/StoreApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>StoreApproved</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( ISPICKVAL(Account1__r.Approval_Status__c, &apos;Approved&apos;))</errorConditionFormula>
    <errorDisplayField>Account1__c</errorDisplayField>
    <errorMessage>This store is not approved by manager</errorMessage>
</ValidationRule>