force-app/main/default/objects/Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Account1__c</columns>
    <columns>Dealer__c</columns>
    <columns>Status__c</columns>
    <columns>Planned_Start_Time__c</columns>
    <columns>Actual_Start_Time__c</columns>
    <columns>Comments__c</columns>
    <columns>Clockout_Latitude__c</columns>
    <columns>ClockIn_Latitude__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>